crates/oxc_css/tests/error/scss/at-rule/use/with-empty.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `$var`, but found `)`
  ┌─ with-empty.scss:1:20
  │
1 │ @use "other" with ();
  │                    ^


